--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -12,10 +12,10 @@
 }
 
 .board-cell {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border: 2px solid #000;
     text-align: center;
     line-height: 20px;
-    margin: 1px;
+    margin: 1px
 }
