--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -1,21 +1,14 @@
 .board {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #C0C0C0; /* Cinza claro retro */
+  border: 2px solid #808080;
+  padding: 10px;
+  margin: 0 auto;
+  width: fit-content;
 }
 
 .board-row {
-    display: flex;
-    justify-content: center;
-}
-
-.board-cell {
-    width: 30px;
-    height: 30px;
-    border: 2px solid #000;
-    text-align: center;
-    line-height: 20px;
-    margin: 1px
+  display: flex;
 }
