--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,46 @@
-.App{
-    text-align: center;
-}
+
+body {
+    background-color: #F0F0F0; /* Cor de fundo clara */
+    font-family: 'Courier New', Courier, monospace; /* Fonte retro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+
+  }
+  .App > * {
+    margin-bottom: 20px;
+  }
+
+  
+.App > *:last-child {
+    margin-bottom: 0;
+  }
+
+  .header-container {
+    width: 100%;
+  }
+  #panel-control {
+    width: 100%;
+  }
+
+  .board-container {
+    width: 100%;
+  }
+  
+  /* Ajustes adicionais para o Footer */
+  .footer {
+    width: 100%;
+  }
+  
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    padding: 20px;
+    border: 2px solid #808080;
+    background-color: #C0C0C0; /* Cinza claro retro */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  }
