--- a/src/components/control-panel/control-panel.css
+++ b/src/components/control-panel/control-panel.css
@@ -3,7 +3,7 @@
   border: 2px solid #808080;
   padding: 10px;
   margin: 20px auto;
-  
+  width: fit-content;
   text-align: center;
   font-family: 'Courier New', Courier, monospace; /* Fonte retro */
 }
