--- a/src/components/game-over/game-over.css
+++ b/src/components/game-over/game-over.css
@@ -1,12 +1,27 @@
 /* game-over.css */
 .game-over {
-    text-align: center;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border: 2px solid #808080;
-    border-radius: 10px;
-    margin-top: 20px;
-  }
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-over-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 300px;
+  text-align: center;
+}
   
   .game-over h1 {
     font-family: 'Lucida Console', Monaco, monospace;
