--- a/src/components/cell/cell.css
+++ b/src/components/cell/cell.css
@@ -58,8 +58,7 @@
   color: gray;
 }
 
-#img-mine {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+.cell img {
+  max-width: 75%;
+  max-height: 75%;
 }
