--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ body {
     align-items: center;
     width: 100%;
     max-width: 1200px;
+    min-width: 600px;
     padding: 20px;
     border: 2px solid #808080;
     background-color: #C0C0C0; /* Cinza claro retro */
