--- a/src/components/game-over/game-over.css
+++ b/src/components/game-over/game-over.css
@@ -1,51 +1,82 @@
-/* game-over.css */
-.game-over {
+.overlay {
   position: fixed;
-  z-index: 1;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
-.game-over-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
+.game-over {
+  padding: 40px;
+  background-color: #f9f6f6;
+  border: 2px solid #808080;
+  border-radius: 10px;
+  border-style: groove;
   width: 80%;
-  max-width: 300px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  /* Centraliza o contêiner */
+  z-index: 1010;
+}
+
+.game-over h1 {
+  font-family: 'Lucida Console', Monaco, monospace;
+  font-size: 40px;
+  color: #b74444;
+  /* Fundo cinza claro */
+  padding: 5px 10px;
+  margin-bottom: 10px;
   text-align: center;
 }
-  
-  .game-over h1 {
-    font-family: 'Lucida Console', Monaco, monospace;
-    font-size: 24px;
-    color: #ff0000;
-  }
-  
-  .game-over h2 {
-    font-family: 'Lucida Console', Monaco, monospace;
-    font-size: 18px;
-    color: #000000;
-  }
-  
-  .game-over button {
-    font-family: 'Lucida Console', Monaco, monospace;
-    padding: 10px 20px;
-    margin-top: 20px;
-    background-color: #ff0000;
-    color: #fff;
-    border: 1px solid #808080;
-    cursor: pointer;
-  }
-  
-  .game-over button:hover {
-    background-color: #cc0000;
-  }
-  
+
+.game-over h2 {
+  font-family: 'Lucida Console', Monaco, monospace;
+  font-size: 25px;
+  font-weight: bold;
+  color: #5e5c5c;
+  background-color: #f8e6e6;
+  text-align: center;
+
+  /* Fundo cinza claro */
+  padding: 5px 10px;
+  /* Adiciona padding para aumentar a área do fundo */
+  border-radius: 5px;
+  /* Bordas arredondadas */
+  border: 1px solid #000;
+  /* Contorno preto */
+  margin-bottom: 10px;
+  /* Espaço entre os elementos */
+}
+
+#iniciar{
+  margin-top: 49px;
+}
+
+.game-over button {
+  font-family: 'Lucida Console', Monaco, monospace;
+  padding: 15px ;
+  margin-top: 4px;
+  background-color: #b74444;
+  color: white;
+  border: 1px solid #808080;
+  cursor: pointer;
+  border-radius: 5px;
+  /* Bordas arredondadas */
+  font-size: 20px;
+  width: 100%;
+}
+
+.game-over button:hover {
+  color: rgb(84, 13, 13);
+  background-color: #f29494;
+}
+
+#maquina{
+  color: green;
+}
